--- a/src/app/admin/category/list-category/list-category.component.html
+++ b/src/app/admin/category/list-category/list-category.component.html
@@ -7,7 +7,7 @@
         <hr class="border-light container-m--x my-4">
 
         <div>
-            <a class="btn btn-success mb-3" routerLink="add-category">Add Category</a>
+            <a class="btn btn-success mb-3" routerLink="/admin/add-category">Add Category</a>
         </div>
         <table class="table table-striped">
             <thead class="thead-dark">
@@ -27,7 +27,7 @@
                     <td scope="col">Vegetable</td>
 
                     <td><a type="a" class="btn btn-round btn-success">active</a></td>
-                    <td> <a routerLink="edit-category" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
+                    <td> <a routerLink="/admin/edit-category" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
                     <td> <a class="btn btn-danger"><i class="fa fa-trash"></i></a></td>
                 </tr>
                 <tr>
@@ -39,7 +39,7 @@
                         <div class="btn btn-round btn-success">active</div>
                     </td>
 
-                    <td> <a routerLink="edit-category" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
+                    <td> <a routerLink="/admin/edit-category" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
                     <td> <a class="btn btn-danger"><i class="fa fa-trash"></i></a></td>
                 </tr>
                 <tr>
@@ -51,7 +51,7 @@
                         <div class="btn btn-round btn-success">active</div>
                     </td>
 
-                    <td> <a routerLink="edit-category" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
+                    <td> <a routerLink="/admin/edit-category" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
                     <td> <a class="btn btn-danger"><i class="fa fa-trash"></i></a></td>
                 </tr>
             </tbody>
